--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,7 @@
 }
 
 @theme inline {
+  /* --default-font-family: var(--product-sans), system-ui, sans-serif; */
   --color-background: hsl(var(--background));
   --color-foreground: hsl(var(--foreground));
   --color-card: hsl(var(--card));
@@ -85,8 +86,10 @@
   --color-chart-3: hsl(var(--chart-3));
   --color-chart-4: hsl(var(--chart-4));
   --color-chart-5: hsl(var(--chart-5));
-  --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-mono: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-sans: var(--product-sans), system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
   --radius: var(--radius);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -129,6 +132,11 @@
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
 }
 
+html,
+body,
+* {
+  font-family: var(--product-sans), system-ui, sans-serif;
+}
 @layer base {
   * {
     @apply border-border outline-ring/50;
